[workspace]
members = [
    "src/cli",
    "src/codegen",
    "src/core",
    "src/macros",
    "src/toasty",

    # Driver implementations
    "src/db/ddb",
    "src/db/sqlite",
    "src/db/pg",

    # General utilities.
    "src/std-util",

    # Examples
    "examples/composite-key",
    "examples/hello-toasty",
    "examples/cratehub",
    "examples/user-has-one-profile",
    "examples/postgres",

    # Tests
    "tests/client",
]

resolver = "2"
