[package]
name = "example-hello-postgres"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
toasty = { path = "../../src/toasty" }
toasty-postgres = { path = "../../src/db/pg" }
toasty-sqlite = { path = "../../src/db/sqlite" }

tokio = { version = "1.18", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres"] }
